modules/gdscript/tests/scripts/parser/errors/function_conflicts_constant.gd
final test = 25


func test():
	pass
